--- a/Minitalk/Libft/Makefile
+++ b/Minitalk/Libft/Makefile
@@ -95,7 +95,7 @@ SRC 		= 	$(addprefix $(SRC_DIR), $(addsuffix .c, $(SRC_FILES)))
 OBJ 		= 	$(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_FILES)))
 
 
-OBJF		=	.cache exists
+OBJF		=	.cache_exists
 
 
 all: 			$(NAME)
