--- a/Minitalk/libft/Makefile
+++ b/Minitalk/libft/Makefile
@@ -76,7 +76,7 @@ GNL_DIR			=	$(SRC_DIR)get_next_line/get_next_line.c
 # Concatenate all source files
 SRC 			= $(FTIS_DIR) $(FTMEM_DIR) $(FTPUT_DIR) $(FTTO_DIR) $(FTTO_DIR) $(FTSTR_DIR) $(FTLST_DIR) $(FTPRINTF_DIR) $(GNL_DIR)
 
-# Object files
+# Apply the pattern substitution to each source file in SRC and produce a corresponding list of object files in the OBJ_DIR
 OBJ 			= $(patsubst $(SRC_DIR)%.c,$(OBJ_DIR)%.o,$(SRC))
 
 # Build rules
