--- a/Minitalk/Makefile
+++ b/Minitalk/Makefile
@@ -5,8 +5,8 @@ CLNBN				= client_bonus
 SVRBN				= server_bonus
 
 # Directories
-LIBFT				= libft
-INC					= inc
+LIBFT				= ./libft/libft.a
+INC					= inc/
 SRC_DIR				= src/
 OBJ_DIR				= obj/
 
@@ -27,45 +27,38 @@ OBJCLB				= $(addprefix $(OBJ_DIR), $(addsuffix .o, $(CLNBN)))
 OBJSVB 				= $(addprefix $(OBJ_DIR), $(addsuffix .o, $(SVRBN)))
 
 # Targets
-start:
-					@make -C $(LIBFT)
-					@cp $(LIBFT)/libft.a .
+start:				
+					@make -C ./libft
 					@make all
 					@make bonus
 
+all:				$(NAME) $(SVR)		
 
-all:				$(NAME) $(SVR)
+$(NAME):			$(OBJCL) $(LIBFT)
+					@$(CC) $(CFLAGS) $(INC) $(OBJCL) $(LIBFT) -o $(NAME)
 
-$(NAME):			$(OBJCL) 
-					@$(CC) $(CFLAGS) $(INC) $(OBJCL) libft.a -o $(NAME)
-
-$(SVR):				$(OBJSV) 
-					@$(CC) $(CFLAGS) $(INC) $(OBJSV) libft.a -o $(SVR)
+$(SVR):				$(OBJSV) $(LIBFT)
+					@$(CC) $(CFLAGS) $(INC) $(OBJSV) $(LIBFT) -o $(SVR)
 					
 bonus:				$(CLNBN) $(SVRBN)
 
-$(CLNBN):			$(OBJCLB) 
-					@$(CC) $(CFLAGS) $(INC) $(OBJCLB) libft.a -o $(CLNBN)
+$(CLNBN):			$(OBJCLB) $(LIBFT)
+					@$(CC) $(CFLAGS) $(INC) $(OBJCLB) $(LIBFT) -o $(CLNBN)
 
-$(SVRBN):			$(OBJSVB) 
-					@$(CC) $(CFLAGS) $(INC) $(OBJSVB) libft.a -o $(SVRBN)
+$(SVRBN):			$(OBJSVB) $(LIBFT)
+					@$(CC) $(CFLAGS) $(INC) $(OBJSVB) $(LIBFT) -o $(SVRBN)
 
 # Compile object files from source files
 $(OBJ_DIR)%.o:		$(SRC_DIR)%.c 
 					@mkdir -p $(@D)
 					@$(CC) $(CFLAGS) $(INC) -c $< -o $@
 
-
 clean:
 					@$(RM) -r $(OBJ_DIR)
-					@make clean -C $(LIBFT)
+					@make clean -C ./libft
 			
-
 fclean:				clean
 					@$(RM) $(NAME) $(SVR) $(CLNBN) $(SVRBN)
-					@$(RM) $(LIBFT)/libft.a
-					@$(RM) libft.a
-
 
 re:					fclean all
 
